2002-11-07  Darin Adler  <darin@apple.com>

        * kwq/KWQKHTMLPart.mm: (KWQKHTMLPart::slotData):
	Add an assert in the hopes of catching bug 3084704 a little earlier.

2002-11-07  Richard Williamson  <rjw@apple.com>

        Don't stop animating unless we're the last referee. (3083281)
        
        * kwq/KWQPixmap.mm:
        (QPixmap::~QPixmap):

=== Alexander-31 ===

2002-11-06  Richard Williamson  <rjw@apple.com>

        Use our notion of unicode whitespace from lookup tables
        and isspace for latin1.  This is more correct than CF.
        Fixed issues Dave ran into with whitespace calculations.
        
        * kwq/KWQChar.mm:
        (QChar::isSpace):

2002-11-05  Darin Adler  <darin@apple.com>

	- fixed 3092722 -- assertion failed

        * kwq/KWQResourceLoader.mm: (-[KWQResourceLoader reportError]):
	Removed the assertion. It wasn't needed.

2002-11-05  Darin Adler  <darin@apple.com>

	- re-fixed 3070484 -- icon rollovers are very slow on Mac OS X website

	Had to roll back some of the files I changed yesterday. I had missed the
	one line of useful code among much stuff we don't need.

        * khtml/khtml_part.cpp:
        (KHTMLPart::init):
        (KHTMLPart::~KHTMLPart):
        (KHTMLPart::slotLoaderRequestStarted):
        (KHTMLPart::slotLoaderRequestDone):
        * kwq/KWQSignal.h:
        * kwq/KWQSignal.mm:
        (KWQSignal::call):
        * kwq/KWQSignalStubs.mm:
        (Loader::requestDone):
        (Loader::requestFailed):
        (Loader::requestStarted):
        * kwq/KWQSlot.h:
        * kwq/KWQSlot.mm:
        (KWQSlot::KWQSlot):
        (KWQSlot::call):
	Just roll back all the changes from my 3091714 check-in below, except
	for the bug fix itself in loader.cpp and KWQResourceLoader.mm.

2002-11-05  Maciej Stachowiak  <mjs@apple.com>

	- fixed 3027404 - pop-up ads not always suppressed
	
        * khtml/ecma/kjs_binding.cpp:
        (ScriptInterpreter::isWindowOpenAllowed): Don't allow opening if